# SO2-Projekt-Dining-Philosophers-Problem

./: .gitignore  README.md
Projekt_1/: .gitignore  README.md  main.cpp
Projekt_2_Chat/: .gitignore  CMakeLists.txt  Chat.sql  Chat2_0.sql  Chat2_0.txt  Makefile  README.md  WhatTryLater  main.cpp  test_curses.cpp
Projekt_2_Chat/Chatfiles/: Config.h
Projekt_2_Chat/Chatfiles/ChatTerminal/: chatcommands.cpp  chatcommands.h  chatterminal.cpp  chatterminal.h  chatterminalback.cpp  chatterminalback.h  chatterminalf.h
Projekt_2_Chat/Chatfiles/Database/: AsyncQueryManager.cpp  AsyncQueryManager.h  ConnectionPool.cpp  ConnectionPool.h
Projekt_2_Chat/Chatfiles/FriendList/: friendlist.cpp  friendlist.h  friendlistback.cpp  friendlistback.h
Projekt_2_Chat/Chatfiles/Login/: login.cpp  login.h  loginback.cpp  loginback.h
Projekt_2_Chat/Chatfiles/MainTerminal/: mainterminal.cpp  mainterminal.h  mainterminalback.cpp  mainterminalback.h
Projekt_2_Chat/Chatfiles/Register/: register.cpp  register.h  registerback.cpp  registerback.h
